<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#36363C"
    tools:context=".P11Activity">


    <ImageView
        android:id="@+id/frp12"
        android:layout_width="227dp"
        android:layout_height="204dp"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="12dp"
        android:contentDescription="@string/todo"
        android:src="@mipmap/p11"
        app:layout_constraintBottom_toTopOf="@+id/spinnar"
        app:layout_constraintEnd_toEndOf="parent" />

    <Spinner
        android:id="@+id/spinnar"
        android:layout_width="63dp"
        android:layout_height="45dp"
        android:layout_marginEnd="108dp"
        android:layout_marginBottom="216dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="parent"
        tools:backgroundTint="@color/white"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="136dp"
        android:layout_marginBottom="132dp"
        android:backgroundTint="#2E2D33"
        android:text="@string/add_to_cart"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/imageFilterView"
        app:layout_constraintEnd_toEndOf="parent" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="114dp"
        android:layout_height="25dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="40dp"
        android:text="@string/c"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toStartOf="@+id/spinnar"
        tools:textColor="@color/white" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="172dp"
        android:layout_marginBottom="68dp"
        android:contentDescription="@string/todo"
        android:onClick="back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageFilterView"
        app:srcCompat="@android:drawable/ic_menu_revert"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/imageFilterView"
        android:layout_width="41dp"
        android:layout_height="33dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="68dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/p" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="spinnar,button,textView,frp12" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="textView,spinnar,frp12,button" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="textView,spinnar,frp12,button" />


</androidx.constraintlayout.widget.ConstraintLayout>